css/custom.css
@media (max-width: 767px) {
  #searchBtn {
    width: 100%;
    margin-top: 10px;
  }
  #locationBtn {
    width: 100%;
  }
}

@media (min-width: 768px) {
  .search-col {
    padding-right: 0;
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  .alert-col {
    padding-right: 0;
  }
}

@media (min-width: 992px) {
  #searchBtn {
    width: 100%;
  }
}

.container {
  margin-bottom: 20px;
}

.my-location-section, .alert-section, .results-section {
  margin-top: 10px;
}

.city-state-heading {
  color: #7F8C8D;
}

.modal-body {
  overflow-x: scroll;
}

.modal-field {
  margin-right: 10px;
}

.modal-hours-open {
  margin-left: 10px;
}

#resultsList, #recentSearchesList {
  margin-top: 20px;
}

